# vibemulator

./: .gitignore  BUILD.bazel  GEMINI.md  MODULE.bazel  Makefile  README.md  WORKSPACE  bazel-bin  bazel-out  bazel-testlogs  bazel-vibemulator  go.mod  go.sum  main.go  response_to_user.txt
api/: controller.pb.go  controller.proto  controller_grpc.pb.go
apu/: apu.go  state.go
bus/: BUILD.bazel  bus.go  state.go
cartridge/: BUILD.bazel  cartridge.go  cartridge_test.go  cnrom.go  mmc1.go  mmc3.go  nrom.go  state.go  uxrom.go
cmd/client/: main.go
cmd/vdb/: main.go
controller/: controller.go
cpu/: BUILD.bazel  cpu.go  cpu_test.go  instructions.go  state.go
display/: BUILD.bazel  display.go
docs/: PLAN.md
mapper/: mapper.go  nrom.go
nestest/: main.go
nestest/testdata/: nestest.nes
ppu/: BUILD.bazel  debug.go  ppu.go  ppu_render_test.go  state.go
rl/: requirements.txt  train_dqn.py  vibemulator_env.py
server/: grpc_server.go
