load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "cartridge",
    srcs = ["cartridge.go"],
    importpath = "github.com/meadori/vibemulator/cartridge",
    visibility = ["//visibility:public"],
)

go_test(
    name = "cartridge_test",
    srcs = ["cartridge_test.go"],
    embed = [":cartridge"],
)
