load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "cpu",
    srcs = [
        "cpu.go",
        "instructions.go",
    ],
    importpath = "github.com/meadori/vibemulator/cpu",
    visibility = ["//:__subpackages__"],
)

go_test(
    name = "cpu_test",
    srcs = ["cpu_test.go"],
    embed = [":cpu"],
)
